<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">209_arunwich_s_application1</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_my_likes">My Likes</string>
  <string name="lbl_color2">color</string>
  <string name="lbl_l">L</string>
  <string name="lbl_m">M</string>
  <string name="lbl_height">Height</string>
  <string name="lbl_number">number</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account ?</string>
  <string name="lbl_s">S</string>
  <string name="lbl4">+</string>
  <string name="lbl5">จังหวัด</string>
  <string name="lbl2">฿ ราคา</string>
  <string name="lbl_phone">Phone</string>
  <string name="lbl3">-</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_account_setting">Account Setting</string>
  <string name="msg_already_have_an">Already have an account ?</string>
  <string name="lbl_description">Description</string>
  <string name="lbl_my_order">My Order</string>
  <string name="lbl_proportions">PROPORTIONS</string>
  <string name="msg_privacy_setting">Privacy Settings</string>
  <string name="msg_term_and_condit">Term and Conditions</string>
  <string name="lbl_log_out">Log Out</string>
  <string name="lbl_proportion">Proportion</string>
  <string name="lbl_number_sold">number sold</string>
  <string name="lbl_mall">Mall</string>
  <string name="msg_bank_accounts">Bank Accounts / Cards</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="msg_account_setting">Account Settings</string>
  <string name="lbl_facebook">Facebook</string>
  <string name="lbl_name">NAME</string>
  <string name="lbl_buy_now">Buy Now</string>
  <string name="lbl">ชื่อสินค้า</string>
  <string name="lbl_size">Size</string>
  <string name="lbl_to_review">To Review</string>
  <string name="lbl_n_a">N/A</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_log_in2">Log in</string>
  <string name="lbl_to_ship">To Ship</string>
  <string name="lbl_latest">Latest</string>
  <string name="lbl_success">Success</string>
  <string name="lbl_search">search</string>
  <string name="lbl_to_receive">To Receive</string>
  <string name="lbl_price_range">Price Range</string>
  <string name="msg_by_clicking_thi2">By clicking this button, you agree with
our </string>
  <string name="lbl_1">1</string>
  <string name="lbl_add_to_cart">Add to Cart</string>
  <string name="lbl_chest">Chest</string>
  <string name="lbl_waistline">Waistline</string>
  <string name="msg_view_purchase_h">View Purchase History</string>
  <string name="lbl_weight">Weight</string>
  <string name="lbl_google">Google</string>
  <string name="msg_account">Account &amp; Security</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_to_pay">To Pay</string>
  <string name="lbl_my_review">My Review</string>
  <string name="lbl_top_sales">Top Sales</string>
  <string name="lbl_free_shipping">Free Shipping </string>
  <string name="msg_forgot_your_pas">Forgot your password?</string>
  <string name="lbl_cart">Cart</string>
  <string name="msg_by_clicking_thi">By clicking this button, you agree with
our Term and Conditions</string>
  <string name="lbl_notification">Notification</string>
  <string name="lbl_inch">inch</string>
  <string name="lbl_recently_viewed">Recently Viewed</string>
  <string name="lbl_relevance">Relevance</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_color">Color</string>
  <string name="lbl_switch_account">Switch Account</string>
  <string name="lbl_my_addresses">My Addresses</string>
  <string name="lbl_language">language / ภาษา</string>
  <string name="lbl_account_setting2">Account Setting</string>
  <string name="lbl_cm">cm</string>
  <string name="msg_notification_se">Notification Settings</string>
  <string name="lbl_hip">Hip</string>
  <string name="lbl_account">Account</string>
  <string name="msg_spend_5_days_an">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
  <string name="lbl_xl">XL</string>
  <string name="password">password</string>
  <string name="email">Email</string>
  <string name="password1">Password</string>
  <string name="sign_up">Sign up</string>
  <string name="google">Google</string>
  <string name="facebook">Facebook</string>
  <string name="email_address">Email</string>
  <string name="phone">Phone</string>
  <string name="pass">Password</string>
  <string name="cm">cm</string>
  <string name="kg">kg</string>
  <string name="proportions">Proportions</string>
  <string name="my_addresses">My Addresses</string>
  <string name="account_setting">Account Setting</string>
    <string name="lbl_notification_message" />
  <string name="lbl_notification_time" />
  <string name="lbl_notification_title" />
</resources>
