<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAEE">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/head_bg"
        android:contentDescription="@null"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="355dp"
        android:background="@drawable/white_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/interextrabold"
            android:text="@string/lbl_login"
            android:textAlignment="center"
            android:textColor="#22284B"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/lbl_email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#C1C1C1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/lbl_password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#C1C1C1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/blue_button"
            android:fontFamily="@font/intersemibold"
            android:text="@string/lbl_log_in2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/msg_forgot_your_pas"
            android:textAlignment="center"
            android:textColor="#6588E6"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/google"
        android:drawablePadding="20dp"
        android:fontFamily="@font/intersemibold"
        android:paddingStart="15dp"
        android:paddingEnd="45dp"
        android:text="@string/lbl_google"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#8F8E93"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/white_button"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="20dp"
        android:fontFamily="@font/intersemibold"
        android:paddingStart="15dp"
        android:paddingEnd="45dp"
        android:text="@string/lbl_facebook"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#8F8E93"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/interregular"
            android:text="@string/msg_don_t_have_an_a"
            android:textColor="#8F8E93"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/intersemibold"
            android:text="@string/sign_up"
            android:textColor="#6588E6"
            android:textSize="16sp"
            android:layout_marginStart="13dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>