<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="logInVM" type="com.arunwichsapplication.app.modules.login.data.viewmodel.LogInVM"/>
    </data>
    <FrameLayout android:id="@+id/frameLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleyellow_50">
        <View
            android:background="@drawable/rectangle_bg_indigo_300_radius_bl_60_br_60"
            android:id="@+id/viewRectangleTwo"
            android:layout_gravity="top|start"
            android:layout_height="@dimen/_345pxv"
            android:layout_marginBottom="@dimen/_10pxv" android:layout_width="@dimen/_390pxh"
            tools:ignore="VisualLintBounds" />
        <LinearLayout android:id="@+id/linearColumnlogin"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearDetail"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{logInVM.logInModel.txtLogin}"
                    style="@style/txtInterextrabold32" tools:text="@string/lbl_log_in2"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFrameThree"
                    style="@style/txtIntersemibold16"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:ellipsize="end"
                    android:hint="@string/email"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    tools:ignore="TextSizeCheck,TouchTargetSizeCheck"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="282dp"
                    tools:layout_editor_absoluteX="60dp"
                    tools:layout_editor_absoluteY="300dp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    style="@style/txtIntersemibold16"
                    android:layout_width="287dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:ellipsize="end"
                    android:gravity="top|start"
                    android:hint="@string/password1"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    tools:ignore="TextSizeCheck,TouchTargetSizeCheck"
                    tools:layout_conversion_absoluteHeight="40dp"
                    tools:layout_conversion_absoluteWidth="282dp"
                    tools:layout_editor_absoluteX="60dp"
                    tools:layout_editor_absoluteY="300dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogInOne"
                    style="@style/btnSolidRounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:ellipsize="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_9pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_9pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_log_in2"
                    android:textAllCaps="false"
                    tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize"
                    tools:text="@string/lbl_log_in2"
                    />

                <TextView
                    android:id="@+id/txtForgotyourpas"
                    style="@style/txtIntersemibold13_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_marginEnd="@dimen/_35pxh"
                    android:layout_marginBottom="@dimen/_26pxv"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{logInVM.logInModel.txtForgotyourpas}"
                    android:textColor="#1976D2"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/msg_forgot_your_pas" />
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowgoogle"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent" android:orientation="horizontal"
                android:baselineAligned="false">
                <LinearLayout android:id="@+id/linearGoogle"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="horizontal" style="@style/groupStylewhite_1">
                    <ImageView android:id="@+id/imageImageThree"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_image3"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_image3"/>

                    <TextView
                        android:id="@+id/txtGoogle"
                        style="@style/txtIntersemibold18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_marginEnd="@dimen/_47pxh"
                        android:layout_marginBottom="@dimen/_7pxv"
                        android:layout_weight="0.72"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{logInVM.logInModel.txtGoogle}"
                        tools:ignore="NestedWeights,TextSizeCheck"
                        tools:text="@string/lbl_google" />
                </LinearLayout>
                <LinearLayout android:id="@+id/linearGoogle1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:orientation="horizontal" style="@style/groupStylewhite_1">
                    <ImageView android:id="@+id/imageImageFour"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginStart="@dimen/_15pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_image4"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_image4"/>

                    <TextView
                        android:id="@+id/txtFacebook"
                        style="@style/txtIntersemibold18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_marginEnd="@dimen/_23pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_weight="0.78"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@{logInVM.logInModel.txtFacebook}"
                        tools:ignore="NestedWeights,TextSizeCheck"
                        tools:text="@string/lbl_facebook" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowconfirmation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_48pxh"
                android:layout_marginStart="@dimen/_48pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent" android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtConfirmation"
                    style="@style/txtInterregular15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.76"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{logInVM.logInModel.txtConfirmation}"
                    android:textColor="#546E7A"
                    tools:ignore="TextSizeCheck"
                    tools:text="@string/msg_don_t_have_an_a" />

                <TextView
                    android:id="@+id/txtSignup"
                    style="@style/txtIntersemibold15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.24"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{logInVM.logInModel.txtSignup}"
                    tools:ignore="TextSizeCheck,VisualLintBounds"
                    tools:text="@string/lbl_sign_up" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
